--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -67,25 +67,30 @@
   description: Seeding streamlines, Line Integral of Convolution (LIC), 3D LIC, illumination and depth cues.
   image: ../images/schedule/streamlines.jpg
 
-- name: Computer graphics technics for scientific visualization (1-2)
+- name: Direct Volume Rendering (1)
   date: Monday, Feb 24
-  description: Rendering primitives, shading, orthographic vs. perspective projections. Rendering primitives, shading, orthographic vs. perspective projections
+  description: Volume rendering, compositing, modeling light, ray casting.
   image: ../images/schedule/vrendering.jpg
 
-- name: Direct Volume Rendering (1-2)
+- name: Direct Volume Rendering (2)
   date: Wednesday, Feb 26
-  description: Volume rendering, compositing, modeling light, ray casting. Transfer functions for 3D data, volume classification, multi-dimensional transfer functions.
+  description: Transfer functions for 3D data, volume classification, multi-dimensional transfer functions.
   image: ../images/schedule/transferfunction.jpg
+
+- name: Vector field visualization (3) 
+  date: Monday, Mar 2
+  description: Streamlines vs streaklines vs pathlines, critical points, topological skeleton, 
+  image: ../images/schedule/flows.jpg
 
 - name: Vector field visualization (1) 
   date: Monday, Mar 2
   description: Introduction to vector fields, 2D vector field representation, integration methods, 4th order Runge-Kutta method.
   image: ../images/schedule/vectorfields.jpg
 
-- name: Vector field visualization (2) 
+- name: Tensor field visualization
   date: Wednesday, Mar 4
-  description: Seeding streamlines, Line Integral of Convolution (LIC), 3D LIC, illumination and depth cues.
-  image: ../images/schedule/streamlines.jpg
+  description: Tensor in engineering and medicine, diffusion tensor imaging, eigenvalues and eigenvectors, direct visualization methods.
+  image: ../images/schedule/tensors.jpg
 
 - name: Spring break
   date: Monday, Mar 9
@@ -97,60 +102,60 @@
   description: No class.
   dayoff: true
 
-- name: Tensor field visualization
-  date: Monday, Mar 16
-  description: Tensor in engineering and medicine, diffusion tensor imaging, eigenvalues and eigenvectors, direct visualization methods.
-  image: ../images/schedule/tensors.jpg
-
 - name: Tensor field visualization (2)
-  date: Wednesday, Mar 18
+  date: Monday, Mar 16
   description: Glyphs for tensors, ellypsoids vs superquadrics, color coding and lit-tensors.
   image: ../images/schedule/tensors2.jpg
 
 - name: Perception 1 
-  date: Monday, Mar 23
+  date: Wednesday, Mar 18
   description: Cognitive neuroscience, optical illusions, the human visual system, Cornsweet Illusion.
   image: ../images/schedule/perception.jpg
 
-- name: Perception 2 
-  date: Wednesday, Mar 25
+- name: Perception 2
+  date: Monday, Mar 23
   description: CIE Chromaticity Diagram, color spaces, color deficiencies, patterns, continuty, and closure.
   image: ../images/schedule/cie.jpg
-  
+    
 - name: Virtual environments
-  date: Monday, Mar 30
+  date: Wednesday, Mar 25
   description: The cave and other immersive enviroments, tasks benefiting from VR, applications in neuroscience and metrology.
   image: ../images/schedule/vrneurons.jpg
     
 - name: Uncertainty visualization (1)
-  date: Wednesday, Apr 1
+  date: Monday, Mar 30
   description: Visualization of error and uncertaintly, the boxplot and its modifications, topological uncertainty.
   image: ../images/schedule/uncertainty1.jpg
     
 - name: Uncertainty visualization (2)
-  date: Monday, Apr 6
+  date: Wednesday, Apr 1  
   description: Isosurface uncertainty, volume rendering uncertainty, ensemble curved boxplot.  
   image: ../images/schedule/uncertainty.jpg
-  
+
 - name: Big data (1)
-  date: Wednesday, Apr 8  
+  date: Monday, Apr 6
   description: The four V's of big data, isosurfaces of big data, data layouts for visualization of big data experiemnts and simulations.
   image: ../images/schedule/bigdatatopo.jpg
 
 - name: Big data (2)
-  date: Monday, Apr 13
+  date: Wednesday, Apr 8
   description: Multi-resolution data structures, parallel visualization, image compositing for volume rendering. 
   image: ../images/schedule/bigdata2.jpg
 
-- name: Visualization Research Challenges
+- name: Computer Graphics Techniques for Scientific Visualization (1)
+  date: Monday, Apr 13
+  description: Rendering primitives, shading, orthographic vs. perspective projections
+  image: ../images/schedule/primitives.jpg
+
+- name: Computer Graphics Techniques for Scientific Visualization (2)
   date: Wednesday, Apr 15
+  description: Rasterization, illumination, non-photorealistic rendering.
+  image: ../images/schedule/shadows.jpg
+
+- name: Visualization Research Challenges
+  date: Monday, Apr 20
   description: In situ analysis and visualization, post hoc data exploration, data quality, and data reduction.
   image: ../images/schedule/challenges.jpg
-
-- name: TBD
-  date: Monday, Apr 20
-  #description: In situ analysis and visualization, post hoc data exploration, data quality, and data reduction.
-  #image: ../images/schedule/challenges.jpg
 
 - name: Reading Day  (no class)
   date: Wednesday, Apr 22
