--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,15 @@
-on: [push]
-jobs:
+#on: [push]
+#jobs:
 
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: deploy_ssh
-        uses: appleboy/ssh-action@master
-        with:
-          script: ~/deploy_sciviscourse
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
+#  build:
+#    name: Build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: deploy_ssh
+#        uses: appleboy/ssh-action@master
+#        with:
+#          script: ~/deploy_sciviscourse
+#          host: ${{ secrets.HOST }}
+#          username: ${{ secrets.USERNAME }}
+#          password: ${{ secrets.PASSWORD }}
        
