--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,9 @@ channels:
   - conda-forge
   - visus
 dependencies:
-  - python=3.7
+  - python=3.9
   - numpy
   - matplotlib
-  - OpenVisus==1.3.70
+  - OpenVisus==2.1.112
+  - vtk
   - itkwidgets
